--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.5",
     "@iconify/react": "^6.0.2",
     "@next/eslint-plugin-next": "15.5.9",
     "@react-types/shared": "3.32.1",
