--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "18.3.1",
     "recharts": "^3.6.0",
-    "string-similarity": "^4.0.4",
     "swr": "^2.3.8",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@eslint/compat": "^1.2.5",
     "@iconify/react": "^6.0.2",
     "@next/eslint-plugin-next": "15.5.9",
@@ -81,7 +81,6 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@types/string-similarity": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
     "eslint": "9.25.1",
