--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@heroui/toast": "2.0.18",
     "@heroui/tooltip": "2.2.25",
     "@heroui/user": "2.2.23",
-    "@internationalized/date": "3.10.0",
+    "@internationalized/date": "3.5.0",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
     "@supabase/ssr": "^0.8.0",
@@ -72,6 +72,7 @@
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.15.0",
     "@eslint/compat": "^1.2.5",
     "@iconify/react": "^6.0.2",
